# vault-native

./: .gitignore  AUDIT_GUIDE.md  BIOMETRIC_IMPLEMENTATION.md  BUGS.md  DEVELOPMENT.md  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: deep-merge.test.js
vault/: app.js  bip39WordList.js  index.html  manifest.json  sw.js
vault/docs/: derivation-and-nonces.md  how-it-works.md  v3-changelog.md
vault/lib/: nostr-tools.min.js
